--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>project1</groupId>
-  <artifactId>project1</artifactId>
+  <groupId>project</groupId>
+  <artifactId>project</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>project1</name>
+  <name>project</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -60,7 +60,7 @@
   </dependencies>
 
   <build>
-    <finalName>project1-${project.version}</finalName>
+    <finalName>project-${project.version}</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
